Fixed spacing on dropdown list

--- a/src/components/PlaylistDropdown/playlist_dropdown.css
+++ b/src/components/PlaylistDropdown/playlist_dropdown.css
@@ -36,7 +36,7 @@ li.dropdown_li {
 }
 
 span.li_text {
-  margin-left: 1em;
+  margin-left: 0.2em;
 }
 
 span.li_text:hover {
